#  Copyright 2018-2019 the MIDOSS project contributors, The University of British Columbia,
#  and Dalhousie University.
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

[metadata]
name = MOHID-Cmd
version = attr: mohid_cmd.__version__
description = MIDOSS-MOHID Command Processor
author = Doug Latornell
author_email = dlatornell@eoas.ubc.ca
url = https://bitbucket.org/midoss/mohid-cmd/
long_description = file: README.rst
license = Apache License, Version 2.0
platform = Linux
classifiers =
    Development Status :: 5 - Production
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Environment :: Console
    Intended Audience :: Science/Research
    Intended Audience :: Education
    Intended Audience :: Developers

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    ; see envs/environment-dev.yaml for conda environment dev installation
    ; see requirements.txt for versions most recently used in development
    arrow
    attrs
    cliff!=2.9.0
    cookiecutter
    f90nml
    gitpython
    nemo_cmd
    pandas
    python-hglib
    pyyaml
