#  Copyright 2018-2021 the MIDOSS project contributors, The University of British Columbia,
#  and Dalhousie University.
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

[metadata]
name = MOHID-Cmd
version = attr: mohid_cmd.__version__
description = MIDOSS-MOHID Command Processor
author = Doug Latornell
author_email = dlatornell@eoas.ubc.ca
url = https://bitbucket.org/midoss/mohid-cmd/
long_description = file: README.rst
license = Apache License, Version 2.0
platform = Linux
classifiers =
    Development Status :: 5 - Production
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Environment :: Console
    Intended Audience :: Science/Research
    Intended Audience :: Education
    Intended Audience :: Developers

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8,<3.10
install_requires =
    # see envs/environment-dev.yaml for conda environment dev installation
    # see envs/requirements.txt for versions most recently used in development
    arrow
    attrs
    cliff
    cookiecutter
    f90nml
    gitpython
    nemo_cmd
    pandas
    python-hglib
    pyyaml
    # NEMO-Cmd  # use python3 -m pip install --editable NEMO-Cmd/
    # MOHID-Cmd  # use python3 -m pip install --editable MOHID-Cmd/

[options.entry_points]
console_scripts =
    mohid = mohid_cmd.main:main

mohid.app =
    gather = mohid_cmd.gather:Gather
    monte-carlo = mohid_cmd.monte_carlo:MonteCarlo
    prepare = mohid_cmd.prepare:Prepare
    run = mohid_cmd.run:Run
